fix(chore): intellij fails at considering usemodulepath false